[package]
name = "simple"
version = "0.1.0"
edition = "2021"

[dependencies]
yew = { version = "0.21", features = ["csr"] }
yewflow = { path = "../../packages/yewflow" }
stylist = { version="0.12.1", features = ["yew_integration"] }
gloo-console = "0.3.0"
wasm-bindgen = "0.2"
implicit-clone = { version="0.4.1", features=["map"] }
indexmap = "2.0.2"
yew-hooks = "0.3.0"
js-sys = "0.3.64"